added topic modeling section

--- a/main.ipynb
+++ b/main.ipynb
@@ -123,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 8,
       "metadata": {
         "id": "3FTTWg_ytyYa"
       },
@@ -292,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -319,7 +319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -735,7 +735,7 @@
               "22  2021 esg summary information within pdf june 2...  "
             ]
           },
-          "execution_count": 7,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -850,7 +850,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -1038,7 +1038,7 @@
               "[3 rows x 24 columns]"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1114,7 +1114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -2230,7 +2230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -4871,6 +4871,103 @@
         "# export it\n",
         "filename=\"test_plot_2\"\n",
         "fig.write_html(filename + \".html\")"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Topic Modeling"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Collecting empath\n",
+            "  Downloading empath-0.89.tar.gz (57 kB)\n",
+            "     ---------------------------------------- 57.6/57.6 kB 3.0 MB/s eta 0:00:00\n",
+            "  Preparing metadata (setup.py): started\n",
+            "  Preparing metadata (setup.py): finished with status 'done'\n",
+            "Requirement already satisfied: requests in c:\\users\\parti\\anaconda3\\lib\\site-packages (from empath) (2.28.1)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\parti\\anaconda3\\lib\\site-packages (from requests->empath) (2022.12.7)\n",
+            "Requirement already satisfied: charset-normalizer<3,>=2 in c:\\users\\parti\\anaconda3\\lib\\site-packages (from requests->empath) (2.0.4)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\parti\\anaconda3\\lib\\site-packages (from requests->empath) (3.3)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\parti\\anaconda3\\lib\\site-packages (from requests->empath) (1.26.11)\n",
+            "Building wheels for collected packages: empath\n",
+            "  Building wheel for empath (setup.py): started\n",
+            "  Building wheel for empath (setup.py): finished with status 'done'\n",
+            "  Created wheel for empath: filename=empath-0.89-py3-none-any.whl size=57799 sha256=d939d213edbd3abd0d27e90d4f09a72878b21091da25268b5db360f0fbea75c7\n",
+            "  Stored in directory: c:\\users\\parti\\appdata\\local\\pip\\cache\\wheels\\5b\\58\\77\\7eed8eef4c6be0cca8920ac319d916811537a37407da220bf1\n",
+            "Successfully built empath\n",
+            "Installing collected packages: empath\n",
+            "Successfully installed empath-0.89\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Install dependencies\n",
+        "!pip install scattertext\n",
+        "!pip3 install empath\n",
+        "# !pip install spacy\n",
+        "# !python -m spacy download en_core_web_sm ### CHOOSE ONE ###"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Import dependencies\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import re\n",
+        "\n",
+        "import scattertext as st\n",
+        "import spacy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "3702307"
+            ]
+          },
+          "execution_count": 23,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "feat_builder = st.FeatsFromOnlyEmpath()\n",
+        "empath_corpus = st.CorpusFromParsedDocuments(df,\n",
+        "                                              category_col='company',\n",
+        "                                              feats_from_spacy_doc=feat_builder,\n",
+        "                                              parsed_col='contents').build()\n",
+        "                                              \n",
+        "html = st.produce_scattertext_explorer(empath_corpus,\n",
+        "                                       category='cocacola',\n",
+        "                                       category_name='cocacola',\n",
+        "                                       not_category_name='pepsico',\n",
+        "                                       width_in_pixels=1000,\n",
+        "                                       metadata=df['file'],\n",
+        "                                       use_non_text_features=True,\n",
+        "                                       use_full_doc=True,\n",
+        "                                       topic_model_term_lists=feat_builder.get_top_model_term_lists())\n",
+        "\n",
+        "open(\"test_empath.html\", 'wb').write(html.encode('utf-8'))"
       ]
     },
     {
